# rofl

./: .gitignore  README.md  app.py  dashboard.py  design-doc.md  main.py  maybe-readme.md  pyproject.toml  requirements.txt  rofl_bandit.py  rofl_contextual_bandit_notebook_v2.ipynb  rofl_streamlit_app.py  session-ses_510b.md
config/: settings.yaml
data/: claims_raw.csv
rl/: dqn_agent.py  env.py  networks.py  ppo_agent.py  train.py
schemas/: claims_schema.json  explanation_schema.json  inference_schema.json
utils/: charts.py  db.py  rl_inference.py  transforms.py
